Fix bug in best tree search.